# airbnb-clone-django

./: .gitignore  build.sh  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializer.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py  0003_booking_not_canceled.py  0004_alter_booking_not_canceled.py
categories/: serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_perk_details_and_more.py  0003_experience_category.py  0004_alter_experience_host_alter_experience_perks.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_fild.py  0003_alter_photo_experience_alter_photo_room.py
reviews/: admin.py
reviews/migrations/: 0001_initial.py  0002_alter_review_user.py  0003_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  (+4 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  views.py
(+7 files in other folders)
